Add bottom menu and some fragments

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,14 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.TheMovie" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/blue_navy</item>
+        <item name="colorPrimaryVariant">@color/blue_navy</item>
+        <item name="android:statusBarColor">@color/blue_navy</item>
     </style>
 
     <style name="Theme.TheMovie" parent="Base.Theme.TheMovie" />
+
+    <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">@android:color/transparent</item>
+    </style>
 </resources>
