--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue_navy">#000080</color>
+    <color name="blue_navy">#1d2951</color>
     <color name="gray">#F5F5F5</color>
+    <color name="yellow">#Ffff00</color>
 </resources>
