Connect API and add Details

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="blue_navy">#1d2951</color>
     <color name="gray">#F5F5F5</color>
     <color name="yellow">#Ffff00</color>
+    <color name="red">#ff0000</color>
 </resources>
