--- a/app/src/main/res/layout/fragment_high_rated.xml
+++ b/app/src/main/res/layout/fragment_high_rated.xml
@@ -17,4 +17,16 @@
         tools:listitem="@layout/item_movie"
         />
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:indeterminateTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        style="?android:attr/progressBarStyle" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
